# gpa-calculator

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  gpa-calculator.sln
dep/: admin.h  calculation.h  db.h  gui.h  main_menu.h  student.h  utils.h
gpa-calculator/: admin.c  calculation.c  db.c  gpa-calculator.sln  gpa-calculator.vcxproj  gpa-calculator.vcxproj.filters  main.c  student.c  test.c  utils.c
i18n/: gpa-calculator.pot
i18n/en_GB/: en_GB.po
i18n/en_GB/LC_MESSAGES/: gpa-calculator.mo
i18n/en_US/: en_US.po
i18n/ms_MY/: ms_MY.po
i18n/ms_MY/LC_MESSAGES/: gpa-calculator.mo
i18n/zh_CN/: zh_CN.po
i18n/zh_CN/LC_MESSAGES/: gpa-calculator.mo
res/: gpa-calculator.pot
res/locale/en_US/LC_MESSAGES/: gpa-calculator.mo
res/po/: en_US.po
src/: admin.c  calculation.c  db.c  gpa-calculator.vcxproj  gpa-calculator.vcxproj.filters  gui.c  main.c  main_menu.c  student.c  utils.c
src/locales/: base.pot
src/locales/ms_MY/: base.po
src/locales/zh_CN/: base.po
src/locales/zh_CN/LC_MESSAGES/: base.mo
tools/: update_lang.py  update_lang.sh
